--- a/src/test/tinc/tincrepo/mpp/gpdb/tests/storage/walrepl/crash/dml/expected/insert_from_external.ans.in
+++ b/src/test/tinc/tincrepo/mpp/gpdb/tests/storage/walrepl/crash/dml/expected/insert_from_external.ans.in
@@ -10,7 +10,7 @@ CREATE EXTERNAL TABLE test_quote1( i text)
 location ('file://rh55-qavm65/tmp/quote.csv' )
 FORMAT 'csv' (delimiter '|' quote '''') ;
 CREATE EXTERNAL TABLE
-select * from test_quote1 order by i;
+select * from test_quote1;
   i  
 -----
  a
@@ -21,9 +21,10 @@ CREATE EXTERNAL TABLE test_quote2( i text)
 location ('file://rh55-qavm65/tmp/quote.csv' )
 FORMAT 'csv' (delimiter '|' quote '"') ;
 CREATE EXTERNAL TABLE
-select * from test_quote2 order by i;
+select * from test_quote2;
   i  
 -----
  'a'
  b
 (2 rows)
+
