--- a/src/test/tinc/tincrepo/mpp/gpdb/tests/storage/walrepl/crash/dml/sql/insert_from_external.sql.in
+++ b/src/test/tinc/tincrepo/mpp/gpdb/tests/storage/walrepl/crash/dml/sql/insert_from_external.sql.in
@@ -6,11 +6,11 @@ CREATE EXTERNAL TABLE test_quote1( i text)
 location ('file://rh55-qavm65/tmp/quote.csv' )
 FORMAT 'csv' (delimiter '|' quote '''') ;
 
-select * from test_quote1 order by i;
+select * from test_quote1;
 
 CREATE EXTERNAL TABLE test_quote2( i text)  
 location ('file://rh55-qavm65/tmp/quote.csv' )
 FORMAT 'csv' (delimiter '|' quote '"') ;
 
-select * from test_quote2 order by i;
+select * from test_quote2;
 
