--- a/gpAux/releng/make/dependencies/ivy.xml
+++ b/gpAux/releng/make/dependencies/ivy.xml
@@ -12,6 +12,7 @@
       <conf name="sol10_sparc_32" visibility="public"/>
       <conf name="sol10_sparc_64" visibility="public"/>
       <conf name="suse11_x86_64"  visibility="public"/>
+      <conf name="sles11_x86_64"  visibility="public"/>
       <conf name="win32"          visibility="public"/>
     </configurations>
 
@@ -22,7 +23,7 @@
       <dependency org="gnu"             name="libstdc"         rev="6.0.22"         conf="rhel7_x86_64->rhel6_x86_64;rhel6_x86_64->rhel6_x86_64;suse11_x86_64->suse11_x86_64;sol10_x86_64->sol10_x86_64" />
       <dependency org="third-party"     name="ext"             rev="1.1"            conf="win32->win32" />
       <dependency org="third-party"     name="ext"             rev="2.0"            conf="hpux_ia64->hpux_ia64;sol10_x86_32->sol10_x86_32;sol10_sparc_32->sol10_sparc_32;sol10_sparc_64->sol10_sparc_64;sol10_x86_64->sol10_x86_64" />
-      <dependency org="third-party"     name="ext"             rev="2.5"            conf="rhel7_x86_64->rhel6_x86_64;rhel6_x86_64->rhel6_x86_64;suse11_x86_64->suse10_x86_64" />
+      <dependency org="third-party"     name="ext"             rev="2.5"            conf="rhel7_x86_64->rhel6_x86_64;rhel6_x86_64->rhel6_x86_64;sles11_x86_64->sles11_x86_64;suse11_x86_64->sles11_x86_64" />
       <dependency org="NetBackup"       name="SDK-7.1"         rev="7.1"            conf="rhel7_x86_64->rhel5_x86_64;rhel6_x86_64->rhel5_x86_64" />
       <dependency org="NetBackup"       name="SDK-7.5"         rev="7.5"            conf="rhel7_x86_64->rhel5_x86_64;rhel6_x86_64->rhel5_x86_64" />
       <dependency org="NetBackup"       name="SDK-7.6"         rev="7.6"            conf="rhel7_x86_64->rhel5_x86_64;rhel6_x86_64->rhel5_x86_64" />
