PR Pipeline: test gpperfmon on all pull requests
- gpperfmon tracks a variety of queries and statistics and system
  properties and metrics in a dedicated database
- Until recently, it hadn't been tested or built very reliably here. It
  is now part of the gpdb_master pipeline.
- We are doing a lot of work to revitalize and provide tests for this
  feature; we plan to make many upcoming pull requests for this
  feature in different ways
- We will look into testing this with installcheck, but for now, it is
  tested with Behave
- Building it as part of PRs will help us get faster feedback
- This should add negligible time to compilation: the tests themselves
  run in less than 5 minutes typically, and will be running in parallel
  with ICW

Signed-off-by: Marbin Tan <mtan@pivotal.io>

--- a/concourse/pipelines/pr_pipeline.yml
+++ b/concourse/pipelines/pr_pipeline.yml
@@ -114,6 +114,18 @@ jobs:
         timeout: 10m
         on_failure: *pr_failure
 
+      - task: gpperfmon
+        file: gpdb_pr/concourse/tasks/behave_gpdb.yml
+        image: centos-gpdb-dev-6
+        input_mapping:
+          gpdb_src: gpdb_pr
+          bin_gpdb: gpdb_artifacts
+        params:
+          BEHAVE_TAGS: gpperfmon
+          BLDWRAP_POSTGRES_CONF_ADDONS: ""
+        timeout: 20m
+        on_failure: *pr_failure
+
     - task: separate_qautils_files_for_rc
       file: gpdb_pr/concourse/tasks/separate_qautils_files_for_rc.yml
       image: centos-gpdb-dev-6
